force-app/main/default/objects/maps__AssignmentPlan__c/maps__AssignmentPlan__c.object-meta.xml
<CustomObject>
    <label>Maps Assignment Plan</label>
    <nameField>
        <label>Maps Assignment Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Assignment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>