force-app/main/default/objects/maps__AssignmentPlan__c/fields/maps__CustomAssignmentField__c.field-meta.xml
<CustomField>
    <fullName>maps__CustomAssignmentField__c</fullName>
    <label>Custom Assignment Field</label>
    <length>40</length>
    <type>Text</type>
</CustomField>