force-app/main/default/objects/maps__AssignmentPlan__c/fields/maps__DebugSObjectField__c.field-meta.xml
<CustomField>
    <fullName>maps__DebugSObjectField__c</fullName>
    <description>The api name of the lookup field that the debug auto assignment object points to. The field reference is used when creating debug auto assignment records.</description>
    <label>Debug SObject Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>