force-app/main/default/objects/maps__AssignmentPlan__c/fields/maps__ErrorField__c.field-meta.xml
<CustomField>
    <fullName>maps__ErrorField__c</fullName>
    <description>Any errors associated with Assignment Plans will be placed in this field.</description>
    <label>Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>