force-app/main/default/objects/maps__AssignmentPlan__c/fields/maps__IsProcessing__c.field-meta.xml
<CustomField>
    <fullName>maps__IsProcessing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the assignment plan is currently processing or not.</description>
    <label>Is Processing</label>
    <type>Checkbox</type>
</CustomField>