force-app/main/default/objects/maps__AssignmentPlan__c/fields/maps__LastBatchId__c.field-meta.xml
<CustomField>
    <fullName>maps__LastBatchId__c</fullName>
    <label>Last Batch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>