force-app/main/default/objects/maps__AssignmentPlan__c/fields/maps__NumBatches__c.field-meta.xml
<CustomField>
    <fullName>maps__NumBatches__c</fullName>
    <label>Number of Batches Processed Last Batch</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>