force-app/main/default/objects/maps__AssignmentPlan__c/fields/maps__ReassignOwner__c.field-meta.xml
<CustomField>
    <fullName>maps__ReassignOwner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reassign Owner</label>
    <type>Checkbox</type>
</CustomField>