force-app/main/default/objects/maps__AssignmentPlan__c/fields/maps__RuleLookupField__c.field-meta.xml
<CustomField>
    <fullName>maps__RuleLookupField__c</fullName>
    <label>Assignment Rule Lookup Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>