force-app/main/default/objects/maps__AssignmentPlan__c/fields/maps__SObject__c.field-meta.xml
<CustomField>
    <fullName>maps__SObject__c</fullName>
    <description>The api name of the sobject associated with this plan.</description>
    <label>SObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>