force-app/main/default/objects/maps__AssignmentPlan__c/fields/maps__SObject_Name__c.field-meta.xml
<CustomField>
    <fullName>maps__SObject_Name__c</fullName>
    <description>The label of the sobject associated with this plan.</description>
    <label>SObject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>