force-app/main/default/objects/maps__AssignmentPlan__c/fields/maps__SOQLFilter__c.field-meta.xml
<CustomField>
    <fullName>maps__SOQLFilter__c</fullName>
    <label>SOQL Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>